# pdmify

./: .gitignore  README.md  pyproject.toml
pdmify/: __init__.py  __main__.py
